cripto/force-app/main/default/objects/Transacao__c/fields/Ativo_da_Carteira__c.field-meta.xml
<CustomField>
    <fullName>Ativo_da_Carteira__c</fullName>
    <label>Ativo da Carteira</label>
    <referenceTo>Ativo_da_Carteira__c</referenceTo>
    <relationshipLabel>Transações</relationshipLabel>
    <relationshipName>Transacoes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>