cripto/force-app/main/default/objects/Transacao__c/fields/Carteira__c.field-meta.xml
<CustomField>
    <fullName>Carteira__c</fullName>
    <label>Carteira</label>
    <referenceTo>Carteira__c</referenceTo>
    <relationshipLabel>Transações</relationshipLabel>
    <relationshipName>TransasoesCarteira</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>