cripto/force-app/main/default/objects/Transacao__c/fields/Ordem__c.field-meta.xml
<CustomField>
    <fullName>Ordem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ordem</label>
    <referenceTo>Ordem__c</referenceTo>
    <relationshipLabel>Transações Ordem</relationshipLabel>
    <relationshipName>TransacoesOrdens</relationshipName>
    <type>Lookup</type>
</CustomField>