cripto/force-app/main/default/objects/Transacao__c/validationRules/Valida_Saldo.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Saldo</fullName>
    <active>true</active>
    <errorConditionFormula>Ativo_da_Carteira__r.Saldo__c +  Quantidade__c &lt; 0</errorConditionFormula>
    <errorMessage>Saldo insuficiente.</errorMessage>
</ValidationRule>